examples/error-codes/undefined/UB-CCV5-bad.output
Error: UB-CCV5
Description: Casting empty value to type other than void.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.2:1, J.2:1 item 23
  at f(UB-CCV5-bad.c:8)
  at main(UB-CCV5-bad.c:8)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
