examples/error-codes/undefined/UB-CCV5-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

// kcc-assert-error(00001)
int f(){
}

int main(void){
	return f();
}
